fix: hide home page overflow content

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -9,6 +9,7 @@
   max-width: 1500px;
   padding-bottom: 30px;
   background-color: rgb(234, 237, 237);
+  overflow: hidden;
   &__container {
     height: max-content;
   }
